MOODI-158 - fix difference between local and remote java version